09.07.01 [bduff]

Have obsoleted the ruleset manager, introduced the concept of
game object factories in its place and migrated all the old 
handler code. Now the client should be suitably distanced 
from the network packets themselves, e.g. deals with abstract
Nation objects instead of PktRulesetNations.

I think it's probably more efficient too..

Visibly, nothing is different.

08.07.01 [bduff]

Many more updates. You can actually connect and start a game now, 
it gets as far as displaying the map, then there are a bunch of
unhandled packets...

Also changed the nation selection dialog to use a list instead of
hundreds (well about 30) radio buttons, which may cut the cheese
on unix, but looks crappy in Java and/or windows. When I get my
head round the image handling, I'll put the flags next to the items
in the list and restructure the layout of this dialog to make it a 
bit wider...

Anyway, back where we were in April 2000, but with 1.11.7-devel, 
which is a step forward, imho. ;)

01.07.01 [bduff]

(I am a lazy git)

Updated Constants.java and net/Pkt*.java to add all missing packets
and fix protocols for 1.12.cvs

Made the code compile

Made the code capable of connecting (and not much else) to a 1.12
client compiled from 1 Jul 2001 CVS snapshot.


00.04.26 [bduff]
  - Took over as maintainer

o Updated Constants.java to reflect 1.10.0 constants. I think this is
mostly correct, but I'll probably need to check it. I've used some
static trickery to simulate enums rather than hard coding constants,
which was prone to errors. This means that the enum constants (which are
static and final) are nevertheless not constant at compile time and
therefore can't be used in switch() statements.

o Updated all net/Pkt*.java and added all missing packets for 1.10.0.

o Created AbstractPacket as a supertype of all net/Pkt*. Standardized
the interface for sending and receiving packets.

o Implemented handlers for dealing with incoming packets from the